--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header class="site-header">
     <div class="container">
       <div class="logo-container">
-        <img src="backpack-logo.png" alt="Backpack Logo" />
+        <img src="backpack-logo.png.webp" alt="Backpack Logo" />
         <div class="logo">Pack My Bag</div>
       </div>
       <nav class="nav-menu">
