--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <!-- Google Identity Services Library for Sign-In -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 
+  <!-- Font Awesome for Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2Lw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- Optional: Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +20,7 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" 
     rel="stylesheet">
 
-  <!-- Inline CSS for logo styling -->
+  <!-- Inline CSS for logo, Google Sign-In, and new elements -->
   <style>
     .site-header .container {
       display: flex;
@@ -54,6 +57,19 @@
       width: 50px;
       height: 50px;
       margin-bottom: 0.5rem;
+    }
+    /* Styling for the packing illustration */
+    .packing-illustration {
+      display: block;
+      margin: 2rem auto;
+      max-width: 300px; /* Adjust size as needed */
+      height: auto;
+    }
+    /* Styling for the icons in "How It Works" */
+    .step i {
+      font-size: 2rem;
+      color: #5cb85c; /* Match your green theme */
+      margin-bottom: 1rem;
     }
   </style>
 </head>
@@ -109,6 +125,9 @@
 
         <!-- Link to Trip Details Page -->
         <button class="cta-btn" onclick="showPage('page2')">Start Packing</button>
+
+        <!-- Packing Illustration -->
+        <img src="packing-illustration.png" alt="Packing Illustration" class="packing-illustration">
       </div>
 
       <!-- How It Works -->
@@ -116,15 +135,18 @@
         <h2>How It Works</h2>
         <div class="steps">
           <div class="step">
-            <h3>1. Enter Your Trip Details</h3>
+            <i class="fas fa-plane"></i>
+            <h3>Enter Your Trip Details</h3>
             <p>Destination, dates, activities & more.</p>
           </div>
           <div class="step">
-            <h3>2. Get Your List</h3>
+            <i class="fas fa-list"></i>
+            <h3>Get Your Personalized List</h3>
             <p>Mistral's chat model returns short, line-by-line items. Or lumps them.</p>
           </div>
           <div class="step">
-            <h3>3. Pack With Peace of Mind</h3>
+            <i class="fas fa-suitcase"></i>
+            <h3>Pack With Peace of Mind</h3>
             <p>Check items off and travel worry-free.</p>
           </div>
         </div>
@@ -381,7 +403,7 @@
   <!-- SHARED FOOTER -->
   <footer class="site-footer">
     <div class="container">
-      <p>© 2025 Pack My Bag. All rights reserved.</p>
+      <p>© 2023 Pack My Bag. All rights reserved.</p>
     </div>
   </footer>
 
