--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
   <!-- Google Identity Services Library for Sign-In -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-  <!-- Font Awesome for Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2Lw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
   <!-- Optional: Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -65,11 +62,36 @@
       max-width: 300px; /* Adjust size as needed */
       height: auto;
     }
-    /* Styling for the icons in "How It Works" */
-    .step i {
+    /* Styling for the "How It Works" section */
+    .how-it-works {
+      text-align: center;
+      padding: 2rem 0;
+    }
+    .how-it-works h2 {
       font-size: 2rem;
-      color: #5cb85c; /* Match your green theme */
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
+    }
+    .steps {
+      display: flex;
+      justify-content: space-around;
+      gap: 2rem;
+    }
+    .step {
+      flex: 1;
+      max-width: 300px;
+    }
+    .step img {
+      width: 40px; /* Adjust size to match the second image */
+      height: auto;
+      margin-bottom: 1.5rem; /* Space between icon and text */
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .step p {
+      font-size: 1rem; /* Smaller font size to match the second image */
+      font-weight: 500;
+      margin: 0;
     }
   </style>
 </head>
@@ -135,19 +157,16 @@
         <h2>How It Works</h2>
         <div class="steps">
           <div class="step">
-            <i class="fas fa-plane"></i>
-            <h3>Enter Your Trip Details</h3>
-            <p>Destination, dates, activities & more.</p>
+            <img src="airplane-icon.png" alt="Airplane Icon">
+            <p>Enter your trip details</p>
           </div>
           <div class="step">
-            <i class="fas fa-list"></i>
-            <h3>Get Your Personalized List</h3>
-            <p>Mistral's chat model returns short, line-by-line items. Or lumps them.</p>
+            <img src="list-icon.png" alt="List Icon">
+            <p>Get your personalized list</p>
           </div>
           <div class="step">
-            <i class="fas fa-suitcase"></i>
-            <h3>Pack With Peace of Mind</h3>
-            <p>Check items off and travel worry-free.</p>
+            <img src="suitcase-icon.png" alt="Suitcase Icon">
+            <p>Pack with peace of mind</p>
           </div>
         </div>
       </section>
